--- a/src/components/BandComponents/OurEvents/_ourevents.module.scss
+++ b/src/components/BandComponents/OurEvents/_ourevents.module.scss
@@ -1,10 +1,10 @@
 .ourEvent {
    position: relative;
    overflow: hidden;
-   width: 100vw;
-   left: 50%;
-   transform: translateX(-50%);
-   margin-inline: 0;
+   // width: 100vw;
+   // left: 50%;
+   // transform: translateX(-50%);
+   padding-inline: 0;
 }
 
 .scroller[data-scroller="scroller"] {
