--- a/src/components/BandComponents/OurTeam/_ourTeam.module.scss
+++ b/src/components/BandComponents/OurTeam/_ourTeam.module.scss
@@ -2,16 +2,18 @@
 
 .teamWrapper {
    @media (min-width: 1025px) {
-      margin-right: 0 !important;
+      padding-right: 0 !important;
    }
 
    --element-indent: calc(calc(55px * 2) - calc(20px * 2));
 }
 
 .teamContainer {
+   max-width: 1440px;
+   margin: auto;
+   padding-left: 100px;
    border-start-start-radius: 15px;
    border-end-start-radius: 15px;
-   margin-left: 80px;
    height: 340px;
    user-select: none !important;
    display: flex;
@@ -19,7 +21,7 @@
    align-items: center;
 
    @media (max-width: 1024px) {
-      margin: auto;
+      padding: 0px;
       max-width: calc(100% - var(--element-indent));
    }
    @media (max-width: 576px) {
